[workspace]
resolver = "2"
members = [ "bytes" , "date" , "coroutine" , "stack", "unix"]

[workspace.package]
rust-version = "1.85.0"
edition = "2024"
authors = [ "Harsh Kumar Moroliya <hkmoroliya@gmail.com>" ]
keywords = [ 
  "bytes",
  "date",
  "time",
  "datetime",
  "chiya",
  "non-blocking",
  "web",
  "http",
  "server",
  "async",
  "async_io",
  "threads",
  "runtime"
]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[workspace.dependencies]
bytes = { version = "1.0.0", path = "./bytes" }
stack = { version = "1.0.0", path = "./stack/" }
unix = { version = "1.0.0", path = "./unix/" }
log = { version = "0.4.25" }
