[package]
name = "lock_api"
version = "1.0.0"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true

[dependencies]
serde = { version = "1.0.217", default-features = false, optional = true }

[features]
default = ["atomic_usize", "arc_lock"]
serde = ["dep:serde"]
arc_lock = []
atomic_usize = []
